<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
    android:id="@+id/sort_az_button"
    android:icon="@drawable/ic_menu"
    android:title="@string/sort_a_z"/>

    <item
        android:id="@+id/sort_za_button"
        android:icon="@drawable/ic_menu"
        android:title="@string/sort_z_a"/>

    <item
        android:id="@+id/logout_button"
        android:icon="@drawable/ic_menu"
        android:title="@string/logout"/>

    <item
        android:id="@+id/sync_button"
        android:icon="@drawable/ic_sync"
        android:title="@string/update"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/delete_button"
        android:icon="@drawable/ic_delete_outline"
        android:title="@string/delete"
        android:iconTint="@color/white"
        app:showAsAction="ifRoom"/>
</menu>